Added two controllers for the API routes. Added the client code to be run on the raspberry pi.
The lectures_add and lectures_find routes have now been defined. A
python script has been created to be run on the raspberry pi. The
script loops to accept a number of student numbers and will POST these
to the API when the terminating condition -1 is entered.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/taylorrees/MAM",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "mongoose": "^4.1.11"
   }
